[package]
name = "axum-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
tokio = { version = "1.15.0" , features = ["full"] }
envy = "0.4.2"
serde = { version = "1.0.136", features = ["derive"]}
dotenv = "0.15.0"
thiserror = "1.0"
snafu="0.7.0"
